version 20071109_1
Made the search input get automatically selected in the Links
search page.

version 20070926_2
Updated the tests to reflect the fact that the one of the creation
pages has been removed.

version 20070926_1
Updated the "find" page so that it is programmatic, but you can
still ask the site administrator if you're still unable to find
the page.

version 20070924_1
Removed one of the creation pages, so it goes directly to the page
after creating it.

version 20070921_1
Properly escape single quotes in the diff rollovers in the
"links" view.

version 20070919_1
Only add the table sorting javascript if there is actually a table
in the rendered Creole.

version 20070918_1
In the links view, don't show circular linked page names if you're
looking at a "recent changes" style listing.  They only make sense
to show in the hierarchical listing.
        
version 20070915_2
Made the "create a new page of x" message pay attention to the
CNF_DEFAULT_PAGE_FORMAT variable.

version 20070915_1
Added the CNF_DEFAULT_PAGE_FORMAT variable, which lets you specify
either text or creole.

version 20070914_1
Made creole tables sortable.

version 20070913_1
Added a message about the text using Creole, and added the cheat sheet.

version 20070912_2
Fixed small bug in the text handling that was causing Text::WikiCreole
to choke on making paragraphs.

version 20070912_1
Added the Text::WikiCreole module and the option of using it to
parse the html.

version 20070829_1
In the "links" view, allow backing up of all the currently viewed
pages (and their options) to a zipped tarball.  Also, made the interface
for these two options a bit more verbose and obvious.

version 20070717_4
Resolve page aliases when calculating diffs for a page
for the rollovers in the links page.

version 20070717_3
Updated the style of the rollover box a bit.

version 20070717_2
Forgot to escape single quotes in the diff rollovers.

version 20070717_1